クリーンビルド

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,4 +2,32 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
-    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+    runs-on: ubuntu-latest
+    container:
+      image: zmkfirmware/zmk-build-arm:stable
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: true
+          fetch-depth: 0
+
+      - name: Pristine workspace
+        run: |
+          git clean -fdx
+          rm -rf build/ /tmp/tmp.*
+
+      - name: West sync
+        run: |
+          west init -l zmk/app
+          west update
+          west zephyr-export
+
+      - name: Build (settings_reset)
+        run: |
+          west build -s zmk/app -b seeeduino_xiao_ble -- -DSHIELD=settings_reset
+
+      - name: Upload firmware
+        uses: actions/upload-artifact@v4
+        with:
+          name: firmware
+          path: build/zephyr/*.uf2
