--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,11 +5,17 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: zmkfirmware/zmk-build-arm:stable
+
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: true
           fetch-depth: 0
+
+      - name: Mark repo as safe
+        run: |
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
+          git config --global --add safe.directory "/__w/zmk-config-roBa/zmk-config-roBa"
 
       - name: Pristine workspace
         run: |
@@ -25,9 +31,3 @@ jobs:
       - name: Build (settings_reset)
         run: |
           west build -s zmk/app -b seeeduino_xiao_ble -- -DSHIELD=settings_reset
-
-      - name: Upload firmware
-        uses: actions/upload-artifact@v4
-        with:
-          name: firmware
-          path: build/zephyr/*.uf2
