--- a/build.yaml
+++ b/build.yaml
@@ -18,10 +18,14 @@
 #
 ---
 include:
- - board: xiao_ble
-   shield: roBa_R
-   snippet: studio-rpc-usb-uart
- - board: xiao_ble
-   shield: roBa_L
- - board: xiao_ble
-   shield: settings_reset
+  - board: xiao_ble
+    shield: roBa_R
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DZMK_EXTRA_MODULES=
+  - board: xiao_ble
+    shield: roBa_L
+    cmake-args: -DZMK_EXTRA_MODULES=
+  - board: xiao_ble
+    shield: settings_reset
+    cmake-args: -DZMK_EXTRA_MODULES=
+
