--- a/build.yaml
+++ b/build.yaml
@@ -18,14 +18,12 @@
 #
 ---
 include:
-  - board: xiao_ble
+  - board:  seeeduino_xiao_ble
     shield: roBa_R
     snippet: studio-rpc-usb-uart
-    cmake-args: -DZMK_EXTRA_MODULES=
-  - board: xiao_ble
-    shield: roBa_L
-    cmake-args: -DZMK_EXTRA_MODULES=
-  - board: xiao_ble
-    shield: settings_reset
-    cmake-args: -DZMK_EXTRA_MODULES=
 
+  - board:  seeeduino_xiao_ble
+    shield: roBa_L
+
+  - board:  seeeduino_xiao_ble
+    shield: settings_reset
