--- a/build.yaml
+++ b/build.yaml
@@ -18,12 +18,13 @@
 #
 ---
 include:
-  - board:  seeeduino_xiao_ble
+  - board:  xiao_ble
     shield: roBa_R
     snippet: studio-rpc-usb-uart
+    cmake-args: -DZMK_EXTRA_MODULES=$min0613_41/zmk-config-roBa
 
-  - board:  seeeduino_xiao_ble
+  - board:  xiao_ble
     shield: roBa_L
 
-  - board:  seeeduino_xiao_ble
+  - board:  xiao_ble
     shield: settings_reset
